syntax = "proto3";

package TikTok;

option go_package = "./proto;gotiktoklive";

// Data structure from im/fetch/ response
message WebcastResponse {
    repeated Message messages = 1;
    string cursor = 2;
    string ackIds = 5;
    WebsocketParam wsParam = 7;
    string wsUrl = 10;
}

message Message {
    string type = 1;
    bytes binary = 2;
}

message WebsocketParam {
    string name = 1;
    string value = 2;
}

// Message types depending on Message.tyoe
message WebcastControlMessage {
    int32 action = 2;
}

// Statistics like viewer count
message WebcastRoomUserSeqMessage {
    int32 viewerCount = 3;
}

message WebcastChatMessage {
    User user = 2;
    string comment = 3;
}

message WebcastMemberMessage {
    User user = 2;
    WebcastMessageEvent event = 1;
}

message WebcastGiftMessage {
    User user = 7;
    string giftJson = 22;
}


// Battle start
message WebcastLinkMicBattle {
    repeated WebcastLinkMicBattleItems battleUsers = 10;
}

message WebcastLinkMicBattleItems {
    WebcastLinkMicBattleGroup battleGroup = 2;
} 

message WebcastLinkMicBattleGroup {
    LinkUser user = 1;
} 


// Battle status
message WebcastLinkMicArmies {
    repeated WebcastLinkMicArmiesItems battleItems = 3;
    int32 battleStatus = 7;
}

message WebcastLinkMicArmiesItems {
    uint64 hostUserId = 1;
    repeated WebcastLinkMicArmiesGroup battleGroups = 2;
} 

message WebcastLinkMicArmiesGroup {
    repeated User users = 1;
    int32 points = 2;
} 



// Follow & share event
message WebcastSocialMessage {
    User user = 2;
    WebcastMessageEvent event = 1;
}

// Like event (is only sent from time to time, not with every like)
message WebcastLikeMessage {
    User user = 5;
    WebcastMessageEvent event = 1;
    int32 likeCount = 2;
    int32 totalLikeCount = 3;
}

// New question event
message WebcastQuestionNewMessage {
    QuestionDetails questionDetails = 2;
}

message QuestionDetails {
    string questionText = 2;
    User user = 5;
}

message WebcastMessageEvent {
    WebcastMessageEventDetails eventDetails = 8;
}

// Contains UI information
message WebcastMessageEventDetails {
    string displayType = 1;
    string label = 2;
}

message User {
    uint64 userId = 1;
    string nickname = 3;
    ProfilePicture profilePicture = 9;
    UserExtraAttributes extraAttributes = 22;
    UserBadgesAttributes badge = 64;
    string uniqueId = 38;
}

message LinkUser {
    uint64 userId = 1;
    string nickname = 2;
    ProfilePicture profilePicture = 3;
    string uniqueId = 4;
}

message ProfilePicture {
    repeated string urls = 1;
}

message UserExtraAttributes {
    int32 followRole = 3;
}

message UserBadgesAttributes {
    repeated UserBadge badges = 21;
}

message UserBadge {
    string type = 2;
    string name = 3;
}


// Websocket incoming message structure
message WebcastWebsocketMessage {
    uint64 id = 2;
    string type = 7;
    bytes binary = 8;
}

// Websocket acknowledgment message
message WebcastWebsocketAck {
    uint64 id = 2;
    string type = 7;
}

message WebcastLiveIntroMessage {
    uint64 id = 2;
    string description = 4;
    User user = 5;
}

// Example:
// {"debug":false,"t_22_2_live_star_br":{"_extra":{"step":null,"now_millis":1647883025704,"now":"2022-03-21T17:17:05.704027216Z","extra_map":{"activity_time":{"start_time":1647572400,"end_time":1648436398,"show_time":1648523399},"age_interval":{"status":false},"anchor_track":{"track":0,"pre_track":0},"final_anchor_daily_task":{"role":1,"task_type":1,"task_item":[],"current_interval":-1},"final_user_daily_task":{"role":2,"task_type":1,"task_item":[],"current_interval":-1},"final_user_lottery":{"score":0},"phase_time":{"phase":1,"preliminary_phase":{"start_time":1647572400000,"end_time":1648177199000},"final_phase":{"start_time":1648177200000,"end_time":1648436399000},"show_phase":{"start_time":1648436400000,"end_time":1648522799000}},"preliminary_anchor_daily_task":{"role":1,"task_type":1,"task_item":[{"name":"","phase_type":1,"phase_index":0,"filter":false,"phase":[{"condition":[{"current":0,"target":1800,"phase":0,"typ":101,"finish_millis":0,"already_repeat_count":0},{"current":0,"target":2,"phase":0,"typ":105,"finish_millis":0,"already_repeat_count":0},{"current":0,"target":30,"phase":0,"typ":115,"finish_millis":0,"already_repeat_count":0}],"reward":[{"reward_type":1001,"reward_id":"low_flare_card_pre_task_daily_reward_id","reward_count":1},{"reward_type":21,"reward_id":"preliminary_anchor_daily_task_flare_notice","reward_count":1},{"reward_type":102,"reward_id":"preliminary_anchor_daily_task_finish_count","reward_count":1}],"finish_millis":0}],"interval":null}],"current_interval":4},"preliminary_user_daily_task":{"role":2,"task_type":1,"task_item":[{"name":"","phase_type":1,"phase_index":0,"filter":false,"phase":[{"condition":[{"current":0,"target":600,"phase":0,"typ":201,"finish_millis":0,"already_repeat_count":0},{"current":0,"target":1,"phase":0,"typ":219,"finish_millis":0,"already_repeat_count":0},{"current":0,"target":10,"phase":0,"typ":209,"finish_millis":0,"already_repeat_count":0}],"reward":[{"reward_type":1,"reward_id":"user_medal","reward_count":1},{"reward_type":21,"reward_id":"user_daily_task_notice","reward_count":1},{"reward_type":29,"reward_id":"special_gift_unlock_group_1","reward_count":1}],"finish_millis":0}],"interval":null}],"current_interval":4},"preliminary_user_lottery":{"score":0},"rank_banner":null,"user_basic":{"anchor_user_same_region":false,"has_anchor_opt_out":false,"is_anchor_qualified":false,"is_user_login":false}},"time_zone":-10800},"_just_anchor":true,"debug":false,"user":"6877484104913257473"},"user":"6877484104913257473"}
message WebcastInRoomBannerMessage {
    string json = 2;
}
